Agregado de archivos

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <h1>Programacion 1 2023</h1>
   <h2>Portfolio Santiago</h2>
   
+  <!--Columnas-->
   <div style="display: flex; flex-direction: row;">
     <div style="flex: 1;">
   <p>Mi nombre es Santiago Lozan, tengo 25 años, soy de la ciudad de Gálvez, Santa Fé. Soy estudiante de la carrera Lic. en Produccion de Videojuegos y Entretenimiento Digital de la Universidad Nacional de Rafaela.  </p>
@@ -78,6 +79,7 @@
         <img src="./Public/hock.png" class="d-block w-100" alt="Hockey">
       </div>
     </div>
+    <!--Boton Carrusel-->
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
