--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
   <h2>Musica para escuchar</h2>
   <!-- <a href=""></a> -->
   <iframe margin = 0 auto; width="800" height="600" src="https://www.youtube.com/embed/dvHihwvxed8" title="Path of The Last Samurai During Lunar Eclipse | Japanese ambient sound for relaxation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+  
   </div>
+  <script src="/Assets/js/funcion.js"></script>
+  <button onclick="mostrarAlerta()" class="miBoton" >Toca Aqui</button>
+  
 </body>
 </html> 
