--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Boostrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="./Assets/css/styles.css">
-  <script src="/Assets/js/funcion.js"></script>
+  <script src="./Assets/js/funcion.js"></script>
   <title>Modulo 0</title>
   <style>
     body {
@@ -99,7 +99,5 @@
   </div>
   
   <button onclick="mostrarAlerta()" class="miBoton" >Toca Aqui</button>
- 
-  
 </body>
 </html> 
