--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
   
   </div>
   
-  <button onclick="mostrarAlerta()" class="miBoton" >Toca Aqui</button>
+  <button onclick="mostrarAlerta()" class="miBoton"> Toca Aqui </button>
+  <script>
+    function mostrarAlerta() {
+      alert("¡Felicitaciones! ¡Encontraste el botón oculto!");
+    }
+  </script> 
 </body>
 </html> 
