Agregado de Proyectos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a class="nav-link" href="#">Inicio <span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Proyectos</a>
+              <a class="nav-link" href="#Proyect" >Proyectos <span class="sr-only"></span></a>
             </li>
             
             <li class="nav-item">
@@ -67,7 +67,7 @@
 </div>
 
 
-<h2>Diferentes selecciones nacionales</h2>
+<!-- <h2>Diferentes selecciones nacionales</h2>
 
   <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner">
@@ -89,19 +89,48 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-  </div>
-
-  <!-- <h2>Musica para escuchar</h2>
-
-  <iframe margin = 0 auto; width="250" height="250" src="https://www.youtube.com/embed/dvHihwvxed8" title="Path of The Last Samurai During Lunar Eclipse | Japanese ambient sound for relaxation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+  </div>  -->
  
-  <h2>Proyectos</h2>
-  <div>
-    <img src=".Public/Render3" alt="Render">
-  </div>
+  <h2 id="Proyect">Proyectos Modelos 3D</h2>
+  <div id="carouselExample" class="carousel slide">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./Public/Render3.png" class="d-block mx-auto" style="max-width: 720px" alt="Toystory">
+      </div>
+      <div class="carousel-item">
+        <img src="./Public/Render4.png" class="d-block mx-auto" style="max-width: 720px" alt="ToyS">
+      </div>
+      <div class="carousel-item">
+        <img src="./Public/RenderPieza.png" class="d-block mx-auto" style="max-width: 720px" alt="Toy">
+      </div>
+      <div class="carousel-item">
+        <img src="./Public/TP2LozanSantiago3.png" class="d-block mx-auto" style="max-width: 720px" alt="Chess">
+      </div>
+      <div class="carousel-item">
+        <video src="./Public/Fallguy.mp4" class="d-block mx-auto" style="max-width: 720px" alt="Fallguy">
+      </div>
+      <button class="carousel-control-prev custom-carousel-btn" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next custom-carousel-btn" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>  
   
   </div>
   
+  <h2><a href="./Public/Fallguy.mp4">
+    <video width="700" height="400" controls>
+      <source src="./Public/Fallguy.mp4">
+    </video>
+  </a></h2>
+
+
+  <h2>Trabajo realizado con Reaper</h2>
+  <iframe width="1280" height="720" src="https://www.youtube.com/embed/XQwcOn3ZzSs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   <button onclick="mostrarAlerta()" class="miBoton"> Toca Aqui </button>
   <script>
     function mostrarAlerta() {
